--- a/src/main/resources/templates/article/edit.html
+++ b/src/main/resources/templates/article/edit.html
@@ -4,12 +4,12 @@
 <head th:replace="fragments/head :: head(~{::title},~{::link}, ~{::script})">
     <title th:text="|Изменение заметки|">Изменение заметки</title>
 
-    <script th:src="@{/static/js/admin/articles/controller.js}"></script>
+    <script th:src="@{/static/js/articles/controller.js}"></script>
 </head>
 <body>
-<header th:replace="fragments/header :: header(article, admin)"></header>
+<header th:replace="fragments/header :: header(article, user)"></header>
 
-<main th:replace="fragments/card/article :: articleFields('/admin/articles')"></main>
+<main th:replace="fragments/card/article :: articleFields('/articles/')"></main>
 
 </body>
 </html>
