--- a/src/main/resources/templates/fragments/card/article.html
+++ b/src/main/resources/templates/fragments/card/article.html
@@ -2,19 +2,15 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
       xmlns="http://www.w3.org/1999/xhtml">
 <main th:fragment="articleFields(action)">
-
-    <nav class="breadcrumb-nav">
+    <nav class="nav-extended">
         <div class="nav-wrapper indigo darken-4">
             <div class="row">
-                <div class="col s12" th:if="${action == '/admin/articles'}">
-                    <a th:href="@{/admin/articles}" class="breadcrumb">Реестр заметок</a>
-                    <a th:href="@{'/admin/articles/' + ${article.id}}" th:text="'№' + ${article.id}"
-                       class="breadcrumb"></a>
-                </div>
-                <div class="col s12" th:if="${action == '/articles/my'}">
-                    <a th:href="@{/}" class="breadcrumb">Главная</a>
-                    <a th:href="@{/my}" class="breadcrumb">Персональные данные</a>
-                    <a th:href="@{/my/articles}" class="breadcrumb">Мои заметки</a>
+                <div class="col s12">
+                    <a th:href="@{/articles}" class="breadcrumb">Заметки</a>
+                    <a th:href="@{${action}}"
+                       th:text="${article.title}" class="breadcrumb">
+                        Заметка
+                    </a>
                 </div>
             </div>
         </div>
@@ -37,12 +33,13 @@
                                 <label for="title">Заголовок</label>
                             </div>
                             <div class="input-field">
-                                <select id="category" th:field="${article.categoryId}">
+                                <select id="category"
+                                        th:field="${article.category.id}" required>
                                     <option th:value="${null}">Не назначена</option>
                                     <option th:each="cat : ${categories}"
                                             th:value="${cat.id}"
                                             th:text="${cat.name}"
-                                            th:selected="${cat.id == article.categoryId}"></option>
+                                            th:selected="${cat.id == article.category.id}"></option>
                                 </select>
                                 <label for="category">Категория</label>
                             </div>
@@ -52,31 +49,12 @@
                                 <label for="content">Текст заметки</label>
                             </div>
                         </div>
-                        <div class="col s12">
-                            <div class="input-field" th:hidden="${action == 'my/'}"
-                                 sec:authorize="hasRole('ROLE_ADMIN')">
-                                <input name="status" th:field="${article.status}" hidden/>
-                                <input id="status" th:value="${article.status.getStringName()}" readonly type="text"/>
-                                <label for="status">Статус</label>
-                            </div>
-                        </div>
                     </div>
                     <div class="row">
-                        <div class="buttons-area col s12">
-                            <button onclick="ArticleController.show()"
-                                    th:if="${action == '/admin/articles' && article.status == T(org.communis.javawebintro.enums.ArticleStatus).NEW}"
-                                    type="button" class="waves-effect waves-light btn">Принять
-                            </button>
-                            <button onclick="ArticleController.hide()"
-                                    th:if="${article.status == T(org.communis.javawebintro.enums.ArticleStatus).SHOWN}"
-                                    type="button" class="waves-effect waves-light btn">Скрыть
-                            </button>
-                            <button onclick="ArticleController.block()"
-                                    th:if="${action == '/admin/articles' && article.status != T(org.communis.javawebintro.enums.ArticleStatus).BLOCKED}"
-                                    type="button" class="waves-effect waves-light btn">Заблокировать
-                            </button>
+                        <div class="center-align col s12">
                             <button onclick="ArticleController.edit()"
-                                    type="button" class="waves-effect waves-light btn">Cохранить
+                                    type="button" class="waves-effect waves-light btn indigo darken-4">
+                                Сохранить
                             </button>
                         </div>
                     </div>
@@ -114,17 +92,19 @@
             <div class="card" th:each="article : ${page}">
                 <div class="card-content">
                     <span class="card-title" th:text="|${article.title}|"></span>
-                    <p th:text="|${#dates.format(article.dateCreate,'dd-MM-yyyy HH:mm')}|"></p>
-                    <a th:href="@{'/categories/'+ ${article.categoryId}}" th:text="${article.categoryId}"></a>
+                    <p th:text="|Автор: ${article.author.getFullName()}|"></p>
+                    <p th:text="|Дата: ${#dates.format(article.dateCreate,'dd-MM-yyyy HH:mm')}|"></p>
+                    <a th:href="@{'/categories/' + ${article.category.id}}" th:text="${article.category.name}"></a>
+                    <p th:text="|${article.content}|"></p>
                 </div>
                 <div class="card-action">
                     <a th:href="@{'/articles/' + ${article.id}}">Подробнее</a>
                 </div>
             </div>
-            <div th:if="${page.totalPages > 1}" class="card-content page-info">
+
+            <div th:if="${page.totalPages > 1}" class="card-panel">
                 <div th:replace="fragments/pagination :: pagination(${action})"></div>
             </div>
-
         </div>
     </div>
     <div th:replace="fragments/filter :: addButton('/articles/add')"></div>
