--- a/src/main/resources/templates/article/add.html
+++ b/src/main/resources/templates/article/add.html
@@ -24,6 +24,7 @@
             </div>
         </div>
     </nav>
+    <div class="container">
     <div class="row">
         <div class="col s12">
             <div class="card-panel">
@@ -65,6 +66,7 @@
                 </form>
             </div>
         </div>
+    </div>
     </div>
     <div th:replace="fragments/error :: errorModalFragment"></div>
 </main>
