--- a/src/main/resources/templates/admin/category/edit.html
+++ b/src/main/resources/templates/admin/category/edit.html
@@ -24,35 +24,38 @@
             </div>
         </div>
     </nav>
-    <div class="row">
-        <div class="col s12">
-            <div class="card-panel">
-                <h5>Данные категории</h5>
-                <form id="category-form" class="form-horizontal row" method="PATCH" th:action="${'/admin/categories'}">
-                    <input type="hidden" name="id" th:field="${category.id}"/>
+    <div class="container">
+        <div class="row">
+            <div class="col s12">
+                <div class="card-panel">
+                    <h5>Данные категории</h5>
+                    <form id="category-form" class="form-horizontal row" method="PATCH"
+                          th:action="${'/admin/categories'}">
+                        <input type="hidden" name="id" th:field="${category.id}"/>
 
-                    <div class="col s6">
-                        <div class="input-field">
-                            <input id="name" name="name" type="text"
-                                   th:field="${category.name}" class="required validate" maxlength="100"/>
-                            <label for="name">Название</label>
+                        <div class="col s6">
+                            <div class="input-field">
+                                <input id="name" name="name" type="text"
+                                       th:field="${category.name}" class="required validate" maxlength="100"/>
+                                <label for="name">Название</label>
+                            </div>
                         </div>
-                    </div>
-                    <div class="center-align col s12">
-                        <button th:if="${category.dateClose == null}"
-                                type="button" class="waves-effect waves-light btn indigo darken-4"
-                                onclick="CategoryController.delete()">
-                            Удалить
-                        </button>
-                        <button type="button" class="waves-effect waves-light btn indigo darken-4"
-                                onclick="CategoryController.edit()">
-                            Сохранить
-                        </button>
-                    </div>
-                    <div class="col s12">
-                        <div th:replace="fragments/error :: errorFragment"></div>
-                    </div>
-                </form>
+                        <div class="center-align col s12">
+                            <button th:if="${category.dateClose == null}"
+                                    type="button" class="waves-effect waves-light btn indigo darken-4"
+                                    onclick="CategoryController.delete()">
+                                Удалить
+                            </button>
+                            <button type="button" class="waves-effect waves-light btn indigo darken-4"
+                                    onclick="CategoryController.edit()">
+                                Сохранить
+                            </button>
+                        </div>
+                        <div class="col s12">
+                            <div th:replace="fragments/error :: errorFragment"></div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
