--- a/src/main/resources/templates/admin/category/list.html
+++ b/src/main/resources/templates/admin/category/list.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header th:replace="fragments/header :: header(category, admin)"></header>
-<main>
+<main class="container">
     <div class="row">
         <div class="col s12">
             <div class="card-panel">
