--- a/src/main/resources/templates/article/view.html
+++ b/src/main/resources/templates/article/view.html
@@ -27,50 +27,54 @@
             </div>
         </div>
     </nav>
-    <div class="row">
-        <div class="col s12">
-            <div class="card">
-                <div class="card-content">
-                    <input type="hidden" id="id" th:field="${article.id}"/>
-                    <span class="card-title" th:text="|${article.title}|"></span>
-                    <p th:text="|Автор: ${article.author.getFullName()}|"></p>
-                    <p th:text="|Дата: ${#dates.format(article.dateCreate,'dd-MM-yyyy HH:mm')}|"></p>
-                    <a th:href="@{'/categories/' + ${article.category.id}}" th:text="${article.category.name}"></a>
-                    <p th:text="|${article.content}|"></p>
+    <div class="container">
+        <div class="row">
+            <div class="col s12">
+                <div th:class="${article.status == T(org.communis.javawebintro.enums.ArticleStatus).BLOCKED} ? 'card grey lighten-4' : 'card'">
+                    <div class="card-content">
+                        <input type="hidden" id="id" th:field="${article.id}"/>
+                        <span class="card-title" th:text="|${article.title}|"></span>
+                        <span th:class="${article.type == T(org.communis.javawebintro.enums.ArticleType).PRIVATE} ? 'white-text badge green' : 'white-text badge orange'"
+                              th:text="${article.type.getStringName()}">Тип</span>
+                        <p th:text="|Автор: ${article.author.getFullName()}|"></p>
+                        <p th:text="|Дата: ${#dates.format(article.dateCreate,'dd-MM-yyyy HH:mm')}|"></p>
+                        <a th:href="@{'/categories/' + ${article.category.id}}" th:text="${article.category.name}"></a>
+                        <p th:text="|${article.content}|"></p>
 
-                </div>
-                <div class="card-action">
-                    <th:block th:if="${#authentication.getPrincipal().getUser().getId() == article.author.id}">
-                        <a th:href="@{'/articles/' + ${article.id} + '/edit'}" type="button"
-                           class="waves-effect waves-light btn indigo darken-4">
-                            Редактировать
-                        </a>
-                        <button onclick="ArticleController.show()"
-                                th:if="${article.type == T(org.communis.javawebintro.enums.ArticleType).PRIVATE}"
-                                type="button" class="waves-effect waves-light btn indigo darken-4">
-                            Показать всем
-                        </button>
-                        <button onclick="ArticleController.hide()"
-                                th:if="${article.type == T(org.communis.javawebintro.enums.ArticleType).PUBLIC}"
-                                type="button" class="waves-effect waves-light btn indigo darken-4">
-                            Скрыть
-                        </button>
-                    </th:block>
+                    </div>
+                    <div class="card-action">
+                        <th:block th:if="${#authentication.getPrincipal().getUser().getId() == article.author.id}">
+                            <a th:href="@{'/articles/' + ${article.id} + '/edit'}" type="button"
+                               class="waves-effect waves-light btn indigo darken-4">
+                                Редактировать
+                            </a>
+                            <button onclick="ArticleController.show()"
+                                    th:if="${article.type == T(org.communis.javawebintro.enums.ArticleType).PRIVATE}"
+                                    type="button" class="waves-effect waves-light btn indigo darken-4">
+                                Показать всем
+                            </button>
+                            <button onclick="ArticleController.hide()"
+                                    th:if="${article.type == T(org.communis.javawebintro.enums.ArticleType).PUBLIC}"
+                                    type="button" class="waves-effect waves-light btn indigo darken-4">
+                                Скрыть
+                            </button>
+                        </th:block>
 
-                    <th:block sec:authorize="hasRole('ROLE_ADMIN')">
-                        <button onclick="ArticleController.block()"
-                                th:if="${article.status == T(org.communis.javawebintro.enums.ArticleStatus).ACTIVE}"
-                                type="button" class="waves-effect waves-light btn indigo darken-4">Заблокировать
-                        </button>
-                        <button onclick="ArticleController.unblock()"
-                                th:if="${article.status == T(org.communis.javawebintro.enums.ArticleStatus).BLOCKED}"
-                                type="button" class="waves-effect waves-light btn indigo darken-4">Разблокировать
-                        </button>
-                        <button onclick="ArticleController.delete()"
-                                th:if="${article.status != T(org.communis.javawebintro.enums.ArticleStatus).DELETED}"
-                                type="button" class="waves-effect waves-light btn indigo darken-4">Удалить
-                        </button>
-                    </th:block>
+                        <th:block sec:authorize="hasRole('ROLE_ADMIN')">
+                            <button onclick="ArticleController.block()"
+                                    th:if="${article.status == T(org.communis.javawebintro.enums.ArticleStatus).ACTIVE}"
+                                    type="button" class="waves-effect waves-light btn indigo darken-4">Заблокировать
+                            </button>
+                            <button onclick="ArticleController.unblock()"
+                                    th:if="${article.status == T(org.communis.javawebintro.enums.ArticleStatus).BLOCKED}"
+                                    type="button" class="waves-effect waves-light btn indigo darken-4">Разблокировать
+                            </button>
+                            <button onclick="ArticleController.delete()"
+                                    th:if="${article.status != T(org.communis.javawebintro.enums.ArticleStatus).DELETED}"
+                                    type="button" class="waves-effect waves-light btn indigo darken-4">Удалить
+                            </button>
+                        </th:block>
+                    </div>
                 </div>
             </div>
         </div>
