--- a/src/main/resources/templates/category/view.html
+++ b/src/main/resources/templates/category/view.html
@@ -24,29 +24,33 @@
             </div>
         </div>
     </nav>
-    <div class="row">
-        <div class="col s12">
-            <div class="card-panel">
-                <div th:replace="fragments/filter :: filter('/categories/' + ${category.id})"></div>
-            </div>
-            <div class="card" th:each="article : ${page}">
-                <div class="card-content">
-                    <span class="card-title" th:text="|${article.title}|"></span>
-                    <p th:text="|Автор: ${article.author.getFullName()}|"></p>
-                    <p th:text="|Дата: ${#dates.format(article.dateCreate,'dd-MM-yyyy HH:mm')}|"></p>
-                    <a th:href="@{'/categories/' + ${article.category.id}}" th:text="${article.category.name}"></a>
-                    <p th:text="|${article.content}|"></p>
+    <div class="container">
+        <div class="row">
+            <div class="col s12">
+                <div class="card-panel">
+                    <div th:replace="fragments/filter :: filter('/categories/' + ${category.id})"></div>
                 </div>
-                <div class="card-action">
-                    <a th:href="@{'/articles/' + ${article.id}}">Подробнее</a>
+                <div class="card" th:each="article : ${page}">
+                    <div class="card-content">
+                        <span class="card-title" th:text="|${article.title}|"></span>
+                        <p th:text="|Автор: ${article.author.getFullName()}|"></p>
+                        <p th:text="|Дата: ${#dates.format(article.dateCreate,'dd-MM-yyyy HH:mm')}|"></p>
+                        <p>
+                            <span th:text="|Категория: |">Категория: </span>
+                            <a th:href="@{'/categories/' + ${article.category.id}}" th:text="${article.category.name}">Категория</a>
+                        </p>
+                        <p th:text="|${article.content}|"></p>
+                    </div>
+                    <div class="card-action">
+                        <a th:href="@{'/articles/' + ${article.id}}">Подробнее</a>
+                    </div>
                 </div>
-            </div>
-            <div th:if="${page.totalPages > 1}" class="card-panel">
-                <div th:replace="fragments/pagination :: pagination('/categories/' + ${category.id})"></div>
+                <div th:if="${page.totalPages > 1}" class="card-panel">
+                    <div th:replace="fragments/pagination :: pagination('/categories/' + ${category.id})"></div>
+                </div>
             </div>
         </div>
     </div>
-
     <div th:replace="fragments/filter :: addButton('/articles/add')"></div>
 </main>
 </body>
