initial db data, article successful edit fix

--- a/src/main/resources/templates/article/edit.html
+++ b/src/main/resources/templates/article/edit.html
@@ -9,7 +9,7 @@
 <body>
 <header th:replace="fragments/header :: header(article, user)"></header>
 
-<main th:replace="fragments/card/article :: articleFields('/articles/')"></main>
+<main th:replace="fragments/card/article :: articleFields('/articles')"></main>
 
 </body>
 </html>
